<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TipCalculator"
    android:id="@+id/GridLayout"
    android:columnOrderPreserved="false"
    android:useDefaultMargins="true"
    android:columnCount="2"
    android:rowCount="5"
    android:orientation="horizontal"
    android:alignmentMode="alignBounds"
    android:clickable="false"
    android:rowOrderPreserved="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/amountTextView"
        android:text="@string/amount"
        android:layout_gravity="right"
        android:labelFor="@+id/amountEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/amountEditText"
        android:layout_column="1"
        android:layout_row="0"
        android:gravity="fill_horizontal"
        android:digits="0123456789"
        android:maxLength="6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/amountDisplayTextView"
        android:layout_column="1"
        android:layout_row="0"
        android:autoText="false"
        android:background="@android:color/holo_blue_bright"
        android:layout_gravity="fill_horizontal"
        android:padding="@dimen/text_view_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/custom_tip_percentage"
        android:id="@+id/customTipTextView"
        android:layout_gravity="right" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customTipSeekBar"
        android:max="30"
        android:progress="18" />

    <Space
        android:layout_width="20px"
        android:layout_height="20px" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fifteen_percent"
            android:id="@+id/percent15TextView"
            android:gravity="center_horizontal"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/eighteen_percent"
            android:id="@+id/percentCustomTextView"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_horizontal"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tip"
        android:id="@+id/tipTextView"
        android:layout_gravity="right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tip15TextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:width="0dp"
            android:padding="@dimen/text_view_padding"
            android:layout_marginRight="@dimen/textview_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tipCustomTextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:width="0dp"
            android:padding="@dimen/text_view_padding" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total"
        android:id="@+id/totalTextView"
        android:layout_gravity="right" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/total15TextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:width="0dp"
            android:padding="@dimen/text_view_padding"
            android:layout_marginRight="@dimen/textview_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/totalCustomTextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:width="0dp"
            android:padding="@dimen/text_view_padding" />
    </LinearLayout>

</GridLayout>
